err.txt
D:\beautifullydone\event_intake_form\apply_framer.cjs:14
  const idx = c.indexOf('from \\'react\\';') + 14;
                        ^^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.1
